--- a/src/app/components/jogo/jogo.component.html
+++ b/src/app/components/jogo/jogo.component.html
@@ -1,7 +1,10 @@
-<div class="containter d-flex justify-content-center mt-4">
+<app-navbar></app-navbar>
+<div class="containter d-flex justify-content-center mt-6">
 <div class="card" style="width: 50rem;">
-    <img class="card-img-top" src="..." alt="Card image cap">
-    <div class="card-body">
+  <div class="embed-responsive embed-responsive-16by9">
+  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cxv6UWuMNwE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  <div class="card-body">
       <h5 class="card-title">Questão 1</h5>
       <p class="card-text">Selecione uma alternativa correta abaixo:</p>
     </div>
@@ -10,9 +13,25 @@
       <li class="list-group-item">B) Abacate</li>
       <li class="list-group-item">C) Melancia</li>
       <li class="list-group-item">D) Melão</li>
+      <li class="list-group-item">
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
+          <label class="form-check-label" for="exampleRadios1">
+            Default radio
+          </label>
+        </div></li>
+      <li class="list-group-item">
+          <div class="form-check">
+              <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+              <label class="form-check-label" for="exampleRadios2">
+                Second default radio
+              </label>
+            </div>
+      </li>
     </ul>
+
     <div class="card-body">
-      <a href="#" class="card-link">Responder</a>
+     <button class="btn btn-primary">Responder</button>
     </div>
   </div>
 </div>
